Fix hugo sidebar styling on mobile

--- a/hugo/assets/scss/styles.scss
+++ b/hugo/assets/scss/styles.scss
@@ -128,6 +128,10 @@ main {
   font-weight: 500;
 }
 
+.td-sidebar-nav__section .ul-1 ul {
+  padding-left: 1.5em;
+}
+
 .td-toc {
   padding-top: 20px;
 }
